2002-06-03  James Henstridge  <james@daa.com.au>

	* README: add note about filing jhbuild bugs in bugzilla.

	* moduleinfo.py (head): fix up meta-gnome-c++ MetaModule def.

2002-06-01  James Henstridge  <james@daa.com.au>

	* moduleinfo.py (gnome2): add support for the gtk-- modules.
	Patch from Ross Burton <r.burton@180sw.com> (from bug 82656).

	* bootstrap.py (bootstraps): update list of bootstraps to latest
	gettext, and also add scrollkeeper to list of imports.

	Apply modified version of Dom's patch:
	
	* module.py (BuildScript.build): keep a counter of which module we
	are building.
	(BuildScript._message): show the module number in the messages.

2002-05-20  James Henstridge  <james@daa.com.au>

	* moduleinfo.py: add gnome-applets to meta-gnome-core module.

2002-05-05  James Henstridge  <james@daa.com.au>

	* moduleinfo.py (gnome-applets): add gail dependency for
	gnome-applets (from Sam th).
	(gnome2): rename the 'head' moduleset to 'gnome2'.  A
	compatibility set name has been added.

	Merge in Johan Dahlin's updates:

	* moduleinfo.py: add some module defs for stuff outside of the
	gnome CVS repo.

	* module.py (Module.__init__): optionally save a cvsroot string
	with the module def.
	(BuildScript.__init__): save checkoutroot on the BuildScript
	object.
	(BuildScript._cvscheckout): if module.cvsroot is not None, then
	use it as the cvsroot.
	(ModuleSet.addmod): new function as shorthand in the moduleinfo.py
	file.

2002-05-02  Benjamin Kahn  <xkahn@ximian.com>

	* bootstrap.py (bootstraps): Add audiofile to the bootstrap
	list.  Not everyone has it, and it isn't in GNOME CVS.

2002-04-30  Malcolm Tredinnick <malcolm@commsecure.com.au>

	* bootstrap.py: When there is an error downloading one of the
	files in the bootstrap phase, report the error. Bitter
	experience indicates that it might not be what you initially
	expect.

2002-04-28  Malcolm Tredinnick <malcolm@commsecure.com.au>

	* README: Made the indicated tools' version numbers match what