@@ -1,3 +1,9 @@
+2002-06-08  James Henstridge  <james@daa.com.au>
+
+	* moduleinfo.py (head): add gtkmm-1.3 as a dependency for
+	gnomemm/libgnomecanvasmm (bug fix by Hing-Wah Wan
+	<hingwah@gnupilgrims.org>).
+
 2002-06-03  James Henstridge  <james@daa.com.au>
 
 	* README: add note about filing jhbuild bugs in bugzilla.
